--- a/.gitmodules
+++ b/.gitmodules
@@ -1,1 +1,4 @@
 
+[submodule "coolstrap-gen/vendor/cordova-ios"]
+	path = coolstrap-gen/vendor/cordova-ios
+	url = git://github.com/apache/incubator-cordova-ios.git
