--- a/coolstrap-gen/Gemfile
+++ b/coolstrap-gen/Gemfile
@@ -2,4 +2,5 @@ source "http://rubygems.org"
 
 # Specify your gem's dependencies in coolstrap-generator.gemspec
 # gem "coolstrap", :git=>"git@bitbucket.org:michelson/coolstrap.git", :branch=>"gem"
+gem 'vendorer', :group => :development
 gemspec
