--- a/.gitignore
+++ b/.gitignore
@@ -25,9 +25,8 @@ Gemfile.lock
 .bundle
 *.gem
 dailyfocus
-coolstrap-gen/lib/coolstrap-gen/templates/bridges/ios/KitchenSink.xcodeproj/project.xcworkspace/xcuserdata/
-coolstrap-gen/lib/coolstrap-gen/templates/bridges/ios/KitchenSink.xcodeproj/xcuserdata/
-
+coolstrap-gen/lib/coolstrap-gen/templates/bridges/**/*
+coolstrap-gen/lib/vendor/CordovaLib
 
 Icon?
 
