--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,7 @@ Gemfile.lock
 dailyfocus
 coolstrap-gen/lib/coolstrap-gen/templates/bridges/**/*
 coolstrap-gen/lib/vendor/CordovaLib
+incubator-cordova-ios
 
 Icon?
 
