rake install vendor including android

--- a/.gitignore
+++ b/.gitignore
@@ -29,6 +29,7 @@ coolstrap-gen/lib/coolstrap-gen/templates/bridges/**/*
 coolstrap-gen/lib/vendor/CordovaLib
 incubator-cordova-ios/**/*
 coolstrap-gen/lib/vendor/incubator-cordova-ios
+coolstrap-gen/lib/vendor/incubator-cordova-android
 
 Icon?
 
